--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,6 @@
   </style>
 </head>
 <body>
-  <script src="//unpkg.com/web-rax-framework@0.6.5/dist/framework.web.js"></script>
+  <script src="https://g.alicdn.com/code/npm/web-rax-framework/0.6.4/dist/framework.web.min.js"></script>
 </body>
 </html>
